--- a/style.css
+++ b/style.css
@@ -64,10 +64,17 @@ h3 {
   grid-template-columns: 1fr 1fr;
 }
 
+@media (max-width: 576px) {
+  #home-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 /* ABOUT PAGE and CV PAGE container */
 #flex-container {
   display: flex;
-  align-items: CENTER;
+  align-items: center;
 }
 
 .pets{
