--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ h3 {
   font-size: 2.5rem;
 }
 
+.no-break{
+  white-space: nowrap;
+}
 .text-section .subtitle {
   font-size: 1.2rem;
   color: #333;
